; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_snd_main.c_S_Music_f.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_snd_main.c_S_Music_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*, i32*)* }

@si = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [37 x i8] c"Usage: music <musicfile> [loopfile]\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @S_Music_f() #0 {
  %1 = alloca i32, align 4
  %2 = load i32 (i32*, i32*)*, i32 (i32*, i32*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @si, i32 0, i32 0), align 8
  %3 = icmp ne i32 (i32*, i32*)* %2, null
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %24

5:                                                ; preds = %0
  %6 = call i32 (...) @Cmd_Argc()
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = icmp eq i32 %7, 2
  br i1 %8, label %9, label %13

9:                                                ; preds = %5
  %10 = load i32 (i32*, i32*)*, i32 (i32*, i32*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @si, i32 0, i32 0), align 8
  %11 = call i32* @Cmd_Argv(i32 1)
  %12 = call i32 %10(i32* %11, i32* null)
  br label %24

13:                                               ; preds = %5
  %14 = load i32, i32* %1, align 4
  %15 = icmp eq i32 %14, 3
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = load i32 (i32*, i32*)*, i32 (i32*, i32*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @si, i32 0, i32 0), align 8
  %18 = call i32* @Cmd_Argv(i32 1)
  %19 = call i32* @Cmd_Argv(i32 2)
  %20 = call i32 %17(i32* %18, i32* %19)
  br label %23

21:                                               ; preds = %13
  %22 = call i32 @Com_Printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %24

23:                                               ; preds = %16
  br label %24

24:                                               ; preds = %4, %21, %23, %9
  ret void
}

declare dso_local i32 @Cmd_Argc(...) #1

declare dso_local i32* @Cmd_Argv(i32) #1

declare dso_local i32 @Com_Printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
